--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,31 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- This stylesheet contains specific styles for displaying the map on
+      on this page. Replace it with your own styles as described in the
+      documentation:
+      https://developers.google.com/maps/documentation/javascript/tutorial -->
+    <!-- <link rel="stylesheet" href="/maps/documentation/javascript/style.css"> -->
+  </head>
+  <body>
+    <h1>{{title}}</h1>
+    <p>Welcome to {{title}}</p>
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        // Create a map object and specify the DOM element for display.
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          scrollwheel: false,
+          zoom: 8
+        });
+      }
+      var googleMapKey =
+      process.env.Map_key
+
+      </script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMap"
+      async defer></script>
+  </body>
+</html>
