--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,14 +32,17 @@
     <div id="map"></div>
     <script>
       var map;
-      function initMap() {
+      function initMapCycling() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: -41.2969092, lng: 174.7720306},
           zoom: 16
         });
+        var bikeLayer = new google.maps.BicyclingLayer();
+        bikeLayer.setMap(map);
       }
+
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMapCycling"
     async defer></script>
   </body>
 </html>
