fixed layout.hbs, index.hbs and styles.css to work together

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,5 +25,9 @@
       </script>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMap"
       async defer></script>
+
+      <button class="map-button" type="button">Cycling Routes</button>
+      <button class="map-button" type="button">Traffic Flow</button>
+      <button class="map-button" type="button">Bus Stops</button>
   </body>
 </html>
