--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,10 @@
-body {
-  padding: 50px;
+html, body {
+  background-color: #333;
+  color: #eee;
+  padding: 20px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  height: 90%;
+  margin: 0;
 }
 
 a {
@@ -10,6 +14,11 @@ a {
 #map {
   height: 80%;
 }
+
+.button-div {
+  /*background-color: #333;*/
+}
+
 .map-button {
   background-color: #4CAF50;
   border: none;
@@ -21,4 +30,8 @@ a {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+}
+
+.text-center {
+  text-align: center;
 }
