--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,16 +8,16 @@
     <!-- <link rel="stylesheet" href="/maps/documentation/javascript/style.css"> -->
   </head>
   <body>
-    <h1>{{title}}</h1>
-    <p>Welcome to {{title}}</p>
+    <h1 class="text-center">{{greeting}} and Welcome to {{title}}!!!</h1>
+    <h3 class="text-center">... {{subtitle}}</h3>
     <div id="map"></div>
     <script>
       function initMap() {
         // Create a map object and specify the DOM element for display.
         var map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
+          center: {lat: -41.2969051, lng: 174.7720253},
           scrollwheel: false,
-          zoom: 8
+          zoom: 16
         });
       }
       var googleMapKey =
@@ -26,8 +26,12 @@
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMap"
       async defer></script>
 
-      <button class="map-button" type="button">Cycling Routes</button>
-      <button class="map-button" type="button">Traffic Flow</button>
-      <button class="map-button" type="button">Bus Stops</button>
+      <br>
+
+      <div class="button-div">
+        <button class="map-button" type="button">Cycling Routes</button>
+        <button class="map-button" type="button">Traffic Flow</button>
+        <button class="map-button" type="button">Bus Stops</button>
+      </div>
   </body>
 </html>
