--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,28 +7,20 @@ html, body {
   margin: 0;
 }
 
-a {
-  color: #00B7FF;
-}
-
 #map {
   height: 80%;
 }
 
-.button-div {
-  /*background-color: #333;*/
-}
-
 .map-button {
-  background-color: #4CAF50;
+  background-color: #4CAF30;
   border: none;
-  color: white;
+  color: #eee;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 4px 20px;
   cursor: pointer;
 }
 
