--- a/views/index.hbs
+++ b/views/index.hbs
@@ -49,6 +49,13 @@
           title: 'Hello World!'
         });
       }
+      //LIGHT RAIL FUNCTION BELOW
+
+
+
+
+
+
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMapCycling"
     async defer></script>
