--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,29 +35,58 @@
         var trafficLayer = new google.maps.TrafficLayer();
         trafficLayer.setMap(map);
       }
-      function initMap() {
-        var myLatLng = {lat: -41.2970827, lng: 174.774749};
+      function initMapLondon() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 51.5058456, lng: -0.1456965},
+          zoom: 12
+        });
+        var transitLayer = new google.maps.TransitLayer();
+        transitLayer.setMap(map);
+      }
+      function initMapEDA() {
+        var myLatLng = {lat: -41.2968469, lng: 174.7738201};
 
         map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 15,
+          zoom: 19,
           center: myLatLng
         });
 
         var marker = new google.maps.Marker({
           position: myLatLng,
           map: map,
-          title: 'Hello World!'
+          title: 'Enspiral Dev Academy'
         });
       }
-      //LIGHT RAIL FUNCTION BELOW
+      function initMapAREA51() {
+        var myLatLng = {lat: 37.2336523, lng: -115.8059359};
 
+        map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 14,
+          center: myLatLng
+        });
 
+        var marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: 'AREA 51'
+        });
+      }
+      function initMapCookies() {
+        var myLatLng = {lat: -43.5540551, lng: 172.4768174};
 
+        map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 18,
+          center: myLatLng
+        });
 
-
-
+        var marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: 'Cookie Time Factory'
+        });
+      }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMapCycling"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMapCookieTime"
     async defer></script>
 
       <br>
