--- a/views/index.hbs
+++ b/views/index.hbs
@@ -57,15 +57,19 @@
 
 
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMapCycling"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMap{{mapType}}"
     async defer></script>
 
       <br>
 
-      <div class="button-div">
+      <div class="center">
+        <button class="map-button" type="button">Default Map</button>
         <button class="map-button" type="button">Cycling Routes</button>
         <button class="map-button" type="button">Traffic Flow</button>
-        <button class="map-button" type="button">Bus Stops</button>
+        <button class="map-button" type="button">Light Rail</button>
+        <button class="map-button" type="button">EDA</button>
+        <button class="map-button" type="button">Secrets</button>
+        <button class="map-button" type="button">Cookies</button>
       </div>
 
   </body>
