add satellite view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -62,7 +62,8 @@
 
         map = new google.maps.Map(document.getElementById('map'), {
           zoom: 14,
-          center: myLatLng
+          center: myLatLng,
+          mapTypeId: 'hybrid'
         });
 
         var marker = new google.maps.Marker({
@@ -76,7 +77,8 @@
 
         map = new google.maps.Map(document.getElementById('map'), {
           zoom: 18,
-          center: myLatLng
+          center: myLatLng,
+          mapTypeId: 'hybrid'
         });
 
         var marker = new google.maps.Marker({
@@ -86,7 +88,7 @@
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMapCookieTime"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARmlZdC56EQCWrGryoVKvQwhhiBsqm_tc&callback=initMapAREA51"
     async defer></script>
 
       <br>
